k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: flight-app-issuer
    kubernetes.io/ingress.global-static-ip-name: k8s-lb
spec:
  rules:
    - host: flight-app.devopsheros.com
      http:
        paths:
          - backend:
              service:
                name: flask-app
                port:
                  number: 5000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - flight-app.devopsheros.com
      secretName: flight-app-certificate
